<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">PressureNet</string>
    <string name="activity_welcome">Welcome to PressureNet</string>
    <string name="currentReading">Current Reading:</string>
    <string name="empty"></string>
    <string name="submitReading">Submit Reading</string>
    <string name="addDataToMap">Add to Map</string>
    <string name="load">Reload</string>
    <string name="settings">Settings</string>
    <string name="showSettings">Show Settings</string>
    <string name="hideSettings">Hide Settings</string>
    <string name="cacheSetting">Cache Data (up to 1M)</string>
    <string name="enableAuto">Enable Auto-Submit</string>
    <string name="disableAuto">Disable Auto-Submit</string>
    <string name="statusStart">Status: </string>
    <string name="chartView">Chart View (millibars over days)</string>
    <string name="refreshFrequency">Auto-Submit</string>
    <string name="submitEvery">Submit Every:</string>
    <string name="data">Data</string>
    <string name="chartTimeDisplay">Chart Time Display</string>
    <string-array name="display_time_chart">
        <item name="3 hours ">3 hours</item>
        <item name="6 hours ">6 hours</item>
        <item name="12 hours ">12 hours</item>
    </string-array>
    <string-array name="refresh_frequency">
        <item name="1 minute">1 minute</item>
        <item name="5 minutes">5 minutes</item>
        <item name="10 minutes">10 minutes</item>
        <item name="30 minutes">30 minutes</item>
        <item name="1 hour">1 hour</item>
        <item name="6 hours">6 hours</item>
        <item name="12 hours">12 hours</item>
    </string-array>
    <string-array name="refresh_frequency_values">
        <item name="1 minute">1 minute</item>
        <item name="5 minutes">5 minutes</item>
        <item name="10 minutes">10 minutes</item>
        <item name="10 minutes">30 minutes</item>
        <item name="1 hour">1 hour</item>
        <item name="6 hours">6 hours</item>
        <item name="12 hours">12 hours</item>
    </string-array>
    <string-array name="condition_refresh_frequency">
        <item name="10 minutes">10 minutes</item>
        <item name="1 hour">1 hour</item>
        <item name="3 hours">3 hours</item>
        <item name="6 hours">6 hours</item>
    </string-array>
    <string-array name="condition_refresh_frequency_values">
        <item name="10 minutes">10 minutes</item>
        <item name="1 hour">1 hour</item>
        <item name="3 hours">3 hours</item>
        <item name="6 hours">6 hours</item>
    </string-array>
    <string-array name="default_units">
        <item>Millibars (mbar)</item>
        <item>Hectopascals (hPa)</item>
        <item>Kilopascals (kPa)</item>
        <item>Standard Atmosphere (atm)</item>
        <item>Millimeteres of Mercury (mmHg)</item>
        <item>Inches of Mercury (inHg)</item>
        <item>Pounds per Square Inch (psi)</item>
    </string-array>
    <string-array name="distance_units">
        <item>Meters (m)</item>
        <item>Kilometers (km)</item>
        <item>Feet (ft)</item>
        <item>Miles (mi)</item>
    </string-array>
    <string-array name="temperature_units">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
        <item>Kelvin (K)</item>
    </string-array>
    <string name="units">Units: </string>
    <string name="close">Close</string>
    <string name="showLocalGraph">Show Local Graph</string>
    <string name="delete">Delete User Data</string>
    <string name="deleteWarning">Warning: This will delete the data that you have recently submitted to PressureNet. You will disappear from the map, but some offline backups or archives may still contain your data for a while. If you would like to be removed urgently, please email software@cumulonimbus.ca</string>
    <string name="my_info">My Info</string>
    <string name="logViewer">Log Viewer</string>
    <string name="view_log">View Log</string>
    <string name="data_visualization">Data Visualization</string>
    <string name="about">About</string>
    <string name="pndv">PressureNet Data Visualization</string>
    <string name="loadInBrowser">Load in Browser</string>
    <string name="shareWith">Share with</string>
    <string-array name="privacy_settings">
        <item>Nobody</item>
        <item>Cumulonimbus (Us)</item>
        <item>Us and Researchers</item>
        <item>Us, Researchers and Forecasters</item>
        <item>Public</item>
    </string-array>
    <string name="welcomeToPressureNET">Welcome to PressureNet</string>
    <string name="appAndSharingDescritption">You\'re helping us make a better weather forecast!
        \n\nWe\'re using the barometer inside new phones to automatically crowdsource live data. You can also help us validate our forecasts
        by telling us what the weather is actually like where you are.  
        \n\nThis app periodically collects sensor data: your location and your atmospheric pressure. We\'ll share this data according to your wishes,
        which you can change below or through Settings.
        \n\nThe more people that use PressureNet, the better it gets, so tell your friends! Thank you!</string>
    <string name="appDescritptionNoBarometer">You\'re helping us make a better weather forecast!
        \n\nWe\'re using sensors inside new phones to automatically crowdsource live data. You can also help us validate our forecasts
        by telling us what the weather is actually like where you are.  
        \n\nYour device doesn\'t have a barometer, but you can still help us out! Send weather reports, and we\'ll share this data according to your wishes,
        which you can change below or through Settings.
        \n\nThe more people that use PressureNet, the better it gets, so tell your friends! Thank you!</string>
    <string name="newWelcomeBarometerIntro">PressureNet is a crowdsourced weather app. 
        Your phone has a barometer which provides new weather data to scientists. 
        
        </string>
    <string name="newWelcomeNoBarometerIntro">PressureNet is a crowdsourced weather app. 
        Your phone doesn\'t have a barometer, but that\'s okay, you can still help!
    </string>
    <string name="newWelcomeSharingDescription">PressureNet collects sensor data: location and atmospheric pressure. 
        We\'ll share this according to your preference, which you can change below and in Settings.
    </string>
    <string name="newWelcomeNotificationIntro">Users nearby you will deliver the most accurate weather notifications
        possible. 
    </string>
    <string name="newWelcomeNotificationPrompt">Would you like to receive notifications?
    </string>
    <string name="closeWelcome">Okay, sounds good!</string>
    <string name="send_debug_log">Send Debug Log</string>
    <string name="sunny">Clear</string>
    <string name="foggy">Foggy</string>
    <string name="cloudy">Cloudy</string>
    <string name="precipitation">Precipitation</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="windyOne">A little windy</string>
    <string name="windyTwo">Very windy</string>
    <string name="windyThree">Extremely windy</string>
    <string name="calm">No wind</string>
    <string name="thick_fog">Thick Fog</string>
    <string name="thin_fog">Thin Fog</string>
    <string name="rain">Rain</string>
    <string name="hail">Hail</string>
    <string name="snow">Snow</string>
    <string name="low_precip">Low</string>
    <string name="moderate_precip">Moderate</string>
    <string name="heavy_precip">Heavy</string>
    <string name="infrequentLightning">Infrequent Lightning</string>
    <string name="frequentLightning">Frequent Lightning</string>
    <string name="heavyLightning">Heavy Lightning</string>
    <string name="send_condition">Send!</string>
    <string name="cancel_condition">Cancel</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="very_cloudy">Very Cloudy</string>
    <string name="light_fog">Light Fog</string>
    <string name="moderate_fog">Moderate Fog</string>
    <string name="heavy_fog">Heavy Fog</string>
    <string name="flooding">Flooding</string>
    <string name="duststorm">Dust storm</string>
    <string name="wildfire">Wildfire</string>
    <string name="tropicalstorm">Tropical storm</string>
    <string name="tornado">Tornado</string>
    <string name="extreme">Severe</string>
    <string name="localData">Local Data</string>
    <string name="pressureNETCommunity">PressureNet Data</string>
    <string name="locationName">Location Name</string>
    <string name="version">Version </string>
    <string name="SDK">SDK </string>
    <string name="connectionErrorMsg">No network connection. Data won\'t load.</string>
    <string name="mapError">Unable to show map</string>
    <string name="showingPressureData">Showing pressure data</string>
    <string name="hidingPressureData">Hiding pressure data</string>
    <string name="showingWeather">Showing weather conditions</string>
    <string name="hidingWeather">Hiding weather conditions</string>
    <string name="satView">Satellite view</string>
    <string name="mapView">Map view</string>
    <string name="locatingUser">Going to your location</string>
    <string name="locationServicesError">Location services not available</string>
    <string name="refreshing">Refreshing...</string>
    <string name="locationPrompt">Enter a search location</string>
    <string name="goingTo">Going to </string>
    <string name="noSearchResults">No search results found</string>
    <string name="preparingAnimation">Preparing animation...</string>
    <string name="animationErrorNoData">No data to animate for this region and time</string>
    <string name="graphErrorNoData">Can\'t display graph, no data was returned</string>
    <string name="noLocationFound">No location found, can\'t submit current condition</string>
    <string name="sendMailChooser">Send mail...</string>
    <string name="feedbackEmailSubject">PressureNet feedback</string>
    <string name="shareIntentText">PressureNet crowdsources Android sensor data to improve weather forecasting. Free app: https://play.google.com/store/apps/details?id=ca.cumulonimbus.barometernetwork</string>
    <string name="pressureNet">PressureNet </string>
    <string name="debugLog"> Debug Log</string>
    <string name="debugLogSent">Debug log sent </string>
    <string name="requestFailed">Request failed: </string>
    <string name="noSavedLocations">No saved locations. Enter a location.</string>
    <string name="timeFromTo"> to </string>
    <string name="minuteAgo"> minute ago</string>
    <string name="minutesAgo"> minutes ago</string>
    <string name="locationUnavailable">Can\'t send data: location unavailable</string>
    <string name="noSensorsDetected">No atmosphere sensors detected</string>
    <string name="noDataToPlot">There\'s no data to plot</string>
    <string name="minimal">Minimal </string>
    <string name="moderate">Moderate </string>
    <string name="heavy">Heavy </string>
    <string name="noLocationAvailable">No location available,  can\'t send condition</string>
    <string name="currentConditionsTweet"> near me, what\'s it like where you are? #PressureNet </string>
    <string name="deleted">Deleted </string>
    <string name="saved">Saved </string>
    <string name="dataSavingError">Couldn\'t save data</string>
    <string name="measurementsTo"> measurements to </string>
    <string name="conditionPrompt">What\'s it like outside?</string>
    <string name="lightRain">Light rain</string>
    <string name="moderateRain">Moderate rain</string>
    <string name="heavyRain">Heavy rain</string>
    <string name="lightHail">Light hail</string>
    <string name="moderateHail">Moderate hail</string>
</resources>