<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView
        android:id="@+id/textAppAndSharingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appAndSharingDescritption"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" />

   

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
        <TextView
	        android:id="@+id/welcomeShareWith"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/shareWith"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:paddingLeft="18dp"
        	android:paddingRight="18dp" />
	         
		  <Spinner  
	         android:id="@+id/spinnerWelcomeSharing"
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" >
	         
	     </Spinner>
	  </LinearLayout>

         <Button
             android:id="@+id/buttonCloseWelcome"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/closeWelcome"
             style="@android:style/Widget.Holo.Light.Button"
             />
     
</LinearLayout>
</ScrollView>