
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:weightSum="1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/outsideLayout" android:minWidth="450dip" android:minHeight="200dip" >
            <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
	                <CheckBox android:id="@+id/checkboxRefresh" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/refreshFrequency" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="0.5" android:minWidth="100dip"></CheckBox>					
	                <Spinner
	                    android:id="@+id/spinnerFrequency"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:layout_weight="0.5"
	                    android:minWidth="100dip" >
					</Spinner>
	                </TableRow>
                <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/textUnits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/units" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_weight="0.5"></TextView>
            		<Spinner android:layout_height="wrap_content" android:id="@+id/spinnerUnits" android:layout_width="257dip" android:layout_weight="0.5" android:layout_gravity="right"></Spinner>
                </TableRow>
                <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="right">
                    
                    <Button android:text="@string/delete" android:id="@+id/buttonDelete" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                </TableRow>
                <TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="right">
					
                    <Button android:text="@string/close" android:id="@+id/buttonClose" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                </TableRow>
          </TableLayout>
    </LinearLayout>
